// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`feature: reserveConfigUpdates > should properly generate files 1`] = `
{
  "jsonConfig": "import {ConfigFile} from '../../../generator/types';
export const config: ConfigFile = {
  rootOptions: {
    chains: ['AaveV4Ethereum'],
    title: 'test',
    shortName: 'Test',
    date: '20260525',
    author: 'test',
    discussion: 'test',
  },
  chainOptions: {
    AaveV4Ethereum: {
      configs: {
        RESERVE_CONFIG_UPDATE: [
          {hub: 'CORE_HUB', spoke: 'MAIN_SPOKE', asset: 'WETH', collateralRisk: '1500'},
          {hub: 'CORE_HUB', spoke: 'LIDO_ESPOKE', asset: 'wstETH', collateralRisk: '1800'},
        ],
      },
      cache: {blockNumber: 42},
    },
  },
};
",
  "payloads": [
    {
      "chain": "AaveV4Ethereum",
      "contractName": "AaveV4Ethereum_Test_20260525",
      "payload": "// SPDX-License-Identifier: MIT
pragma solidity ^0.8.0;

import {AaveV4Ethereum, AaveV4EthereumAssets, AaveV4EthereumHubs, AaveV4EthereumSpokes} from 'aave-address-book/AaveV4Ethereum.sol';
import {RiskStewardsEthereum} from '../../../scripts/networks/RiskStewardsEthereum.s.sol';
import {IAaveV4ConfigEngine} from 'aave-v4/config-engine/interfaces/IAaveV4ConfigEngine.sol';
import {EngineFlags} from 'aave-v4/config-engine/libraries/EngineFlags.sol';
/**
 * @title test
 * @author test
 * - discussion: test
 * - deploy-command: make run-script contract=src/updates/20260525_AaveV4Ethereum_Test/AaveV4Ethereum_Test_20260525.sol:AaveV4Ethereum_Test_20260525 network=mainnet broadcast=false generate_diff=true skip_timelock=false
 */
contract AaveV4Ethereum_Test_20260525 is RiskStewardsEthereum {
  function name() public pure override returns (string memory) {
    return 'AaveV4Ethereum_Test_20260525';
  }

  function reserveConfigUpdates() public pure override returns (IAaveV4ConfigEngine.ReserveConfigUpdate[] memory updates) {
            updates = new IAaveV4ConfigEngine.ReserveConfigUpdate[](2);

            updates[0] = IAaveV4ConfigEngine.ReserveConfigUpdate({
              spokeConfigurator: AaveV4Ethereum.SPOKE_CONFIGURATOR,
              spoke: address(AaveV4EthereumSpokes.MAIN_SPOKE),
              hub: address(AaveV4EthereumHubs.CORE_HUB),
              underlying: AaveV4EthereumAssets.WETH_UNDERLYING,
              priceSource: EngineFlags.KEEP_CURRENT_ADDRESS,
              collateralRisk: 1_500,
              paused: EngineFlags.KEEP_CURRENT,
              frozen: EngineFlags.KEEP_CURRENT,
              borrowable: EngineFlags.KEEP_CURRENT,
              receiveSharesEnabled: EngineFlags.KEEP_CURRENT
            });
updates[1] = IAaveV4ConfigEngine.ReserveConfigUpdate({
              spokeConfigurator: AaveV4Ethereum.SPOKE_CONFIGURATOR,
              spoke: address(AaveV4EthereumSpokes.LIDO_ESPOKE),
              hub: address(AaveV4EthereumHubs.CORE_HUB),
              underlying: AaveV4EthereumAssets.wstETH_UNDERLYING,
              priceSource: EngineFlags.KEEP_CURRENT_ADDRESS,
              collateralRisk: 1_800,
              paused: EngineFlags.KEEP_CURRENT,
              frozen: EngineFlags.KEEP_CURRENT,
              borrowable: EngineFlags.KEEP_CURRENT,
              receiveSharesEnabled: EngineFlags.KEEP_CURRENT
            });
          }
}",
    },
  ],
}
`;

exports[`feature: reserveConfigUpdates > should return reasonable code 1`] = `
{
  "code": {
    "fn": [
      "function reserveConfigUpdates() public pure override returns (IAaveV4ConfigEngine.ReserveConfigUpdate[] memory updates) {
            updates = new IAaveV4ConfigEngine.ReserveConfigUpdate[](2);

            updates[0] = IAaveV4ConfigEngine.ReserveConfigUpdate({
              spokeConfigurator: AaveV4Ethereum.SPOKE_CONFIGURATOR,
              spoke: address(AaveV4EthereumSpokes.MAIN_SPOKE),
              hub: address(AaveV4EthereumHubs.CORE_HUB),
              underlying: AaveV4EthereumAssets.WETH_UNDERLYING,
              priceSource: EngineFlags.KEEP_CURRENT_ADDRESS,
              collateralRisk: 1_500,
              paused: EngineFlags.KEEP_CURRENT,
              frozen: EngineFlags.KEEP_CURRENT,
              borrowable: EngineFlags.KEEP_CURRENT,
              receiveSharesEnabled: EngineFlags.KEEP_CURRENT
            });
updates[1] = IAaveV4ConfigEngine.ReserveConfigUpdate({
              spokeConfigurator: AaveV4Ethereum.SPOKE_CONFIGURATOR,
              spoke: address(AaveV4EthereumSpokes.LIDO_ESPOKE),
              hub: address(AaveV4EthereumHubs.CORE_HUB),
              underlying: AaveV4EthereumAssets.wstETH_UNDERLYING,
              priceSource: EngineFlags.KEEP_CURRENT_ADDRESS,
              collateralRisk: 1_800,
              paused: EngineFlags.KEEP_CURRENT,
              frozen: EngineFlags.KEEP_CURRENT,
              borrowable: EngineFlags.KEEP_CURRENT,
              receiveSharesEnabled: EngineFlags.KEEP_CURRENT
            });
          }",
    ],
  },
}
`;
